# dota2-api

./: .gitignore  Cargo.toml
.github/workflows/: api.yml  lambda.yml
API/: dota2-api-deploy.json
src/: config.rs  constants.rs  context.rs  main.rs  types.rs
src/routes/: fallback.rs  get_match.rs  mod.rs
