[package]
name = "dota2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-dispatcher = "0.3.4"
util = { git = "https://github.com/Accurate0/util-rs.git" }

lambda_runtime = "0.5.1"
lambda_http = "0.5.1"
serde = "1.0.126"
tokio = "1.6.1"
serde_json = "1.0.79"
serde_derive = "1.0.136"
http = "0.2.6"
async-trait = "0.1.56"
log = "0.4.0"
openssl = { version = "0.10", features = ["vendored"] }
aws-types = "0.12.0"
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
